Experimental native processing offloading
